syntax = "proto3";

package chat;

option go_package = "github.com/mamataliev-dev/social-platform/api/gen/chatpb;chatpb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// ===================== Chat Service =====================

service ChatService {
  // ---- Room Management ----

  // Creates or fetches a 1-on-1 room between two users
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {
    option (google.api.http) = {
      post: "/v1/rooms"
      body: "*"
    };
  }

  // Gets all rooms for a user
  rpc GetUserRooms(GetUserRoomsRequest) returns (GetUserRoomsResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/rooms"
    };
  }

  // ---- Messaging ----

  // Sends a message in a room
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {
    option (google.api.http) = {
      post: "/v1/rooms/{room_id}/messages"
      body: "*"
    };
  }

  // Gets historical messages for a room
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {
    option (google.api.http) = {
      get: "/v1/rooms/{room_id}/messages"
    };
  }

  // Streams new messages from a room (gRPC only)
  rpc StreamMessages(StreamMessagesRequest) returns (stream ChatMessage);
}


// ===================== Room Messages =====================

message CreateRoomRequest {
  string user_a_id = 1;
  string user_b_id = 2;
}

message CreateRoomResponse {
  Room room = 1;
}

message GetUserRoomsRequest {
  string user_id = 1;
}

message GetUserRoomsResponse {
  repeated Room rooms = 1;
}

message Room {
  string id = 1;
  string user_a_id = 2;
  string user_b_id = 3;
  google.protobuf.Timestamp created_at = 4;
}


// ===================== Chat Messages =====================

message SendMessageRequest {
  string room_id = 1;
  string sender_id = 2;
  string content = 3;
}

message SendMessageResponse {
  ChatMessage message = 1;
}

message GetMessagesRequest {
  string room_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetMessagesResponse {
  repeated ChatMessage messages = 1;
}

message StreamMessagesRequest {
  string room_id = 1;
}

message ChatMessage {
  string id = 1;
  string room_id = 2;
  string sender_id = 3;
  string content = 4;
  google.protobuf.Timestamp timestamp = 5;
}
